Python Basic Setup

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,38 @@ name = "pypi"
 
 [packages]
 
+pytz = "==2018.3"
+awesome-slugify = "==1.6.5"
+pillow = "==5.0.0"
+"argon2-cffi" = "==18.1.0"
+redis = ">=2.10.5"
+django = "==2.0.3"
+django-environ = "==0.4.4"
+django-model-utils = "==3.1.1"
+django-allauth = "==0.35.0"
+django-crispy-forms = "==1.7.2"
+django-redis = "==4.9.0"
+djangorestframework = "*"
+coreapi = "==2.3.3"
+werkzeug = "==0.14.1"
+ipdb = "==0.11"
+sphinx = "==1.7.2"
+"psycopg2-binary" = "==2.7.4"
+pytest = "==3.5.0"
+pytest-sugar = "==0.9.1"
+"flake8" = "==3.5.0"
+coverage = "==4.5.1"
+factory-boy = "==2.10.0"
+django-test-plus = "==1.0.22"
+django-debug-toolbar = "==1.9.1"
+django-extensions = "==2.0.6"
+django-coverage-plugin = "==1.5.0"
+pytest-django = "==3.1.2"
+yapf = "*"
+django-taggit = "*"
+djangorestframework-jwt = "*"
+django-taggit-serializer = "*"
+django-rest-auth = "*"
 
 
 [dev-packages]
