--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-textarea-autosize": "^6.1.0",
     "reactotron-react-js": "^1.13.0",
     "reactotron-redux": "^1.13.0",
     "redux": "^3.7.2",
