--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,8 @@
   "proxy": "http://localhost:8000",
   "dependencies": {
     "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -55,7 +53,6 @@
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
@@ -75,6 +72,13 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.2"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "lodash-webpack-plugin": "^0.11.5",
+    "redux-devtools-extension": "^2.13.2",
+    "webpack": "^3.11.0"
   }
 }
