--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "reset-css": "^3.0.0",
     "sass-loader": "^6.0.7",
     "style-loader": "0.19.0",
+    "styled-components": "^3.2.6",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack-dev-server": "2.9.4",
